@@ -48,6 +48,7 @@
 				</div><!--end entry-->
 				
 			<?php edit_post_link('Edit', '<p>', '</p>'); ?>	
+			<?php wp_link_pages(array('before' => 'Pages: ', 'next_or_number' => 'number')); ?>
 					
 			<?php if ($showgplus == "1"):?>
 				<div class="gplusone" >	
