@@ -34,8 +34,8 @@ get_header(); ?>
 			
 				<div class="post_container">
 				
-					<?php wp_link_pages(array('before' => 'Pages: ', 'next_or_number' => 'number')); ?>
-
+				<?php if (function_exists('ifeature_breadcrumbs')) ifeature_breadcrumbs(); ?>
+				
 					<div <?php post_class() ?> id="post-<?php the_ID(); ?>">
 			
 						<h2 class="posts_title"><?php the_title(); ?></h2>
@@ -45,6 +45,9 @@ get_header(); ?>
 							<div class="entry">
 								<?php the_content(); ?>
 							</div><!--end entry-->
+							
+							<?php wp_link_pages(array('before' => 'Pages: ', 'next_or_number' => 'number')); ?>
+
 						<?php edit_post_link('Edit', '<p>', '</p>'); ?>
 						
 						<?php if ($showgplus == "1"):?>
