@@ -59,6 +59,8 @@ a img {border: none; }
 
 ul, ol { margin: 0 0 10px 0; }
 
+#crumbs {margin-bottom: 5px;}
+
 /* Header  */
 
 #header { height: 140px; }
@@ -275,12 +277,36 @@ ol {
 	-moz-border-radius: 3px;
 }
 
-img.alignright {float:right; margin:0 0 1em 1em}
-img.alignleft {float:left; margin:0 1em 1em 0}
-img.aligncenter {display: block; margin-left: auto; margin-right: auto}
-a img.alignright {float:right; margin:0 0 1em 1em}
-a img.alignleft {float:left; margin:0 1em 1em 0}
-a img.aligncenter {display: block; margin-left: auto; margin-right: auto}
+.alignleft,
+img.alignleft {
+	display: inline;
+	float: left;
+  	margin-right: 1.5em;
+  	margin-bottom: 5px;
+  	margin-top: 5px;
+}
+.alignright,
+img.alignright {
+	display: inline;
+	float: right;
+  margin-left: 1.5em;
+}
+.aligncenter,
+img.aligncenter {
+	clear: both;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+img.size-full {
+	max-width: 640px;
+	height: auto;
+}
+
+p {
+     clear: both;
+}
 
 .aligncenter, div.aligncenter {
 	display: block;
